--- a/package.json
+++ b/package.json
@@ -7,17 +7,28 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate-icons": "node scripts/generate-icons.js"
+    "generate-icons": "node scripts/generate-icons.js",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:migrate:prod": "prisma migrate deploy",
+    "db:studio": "prisma studio",
+    "db:seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "@types/node": "^20.14.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.23",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.454.0",
     "next": "^14.2.33",
     "next-intl": "^3.22.0",
+    "pg": "^8.16.3",
     "postcss": "^8.5.6",
+    "prisma": "^7.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
@@ -25,6 +36,8 @@
     "typescript": "^5.5.3"
   },
   "devDependencies": {
-    "sharp": "^0.34.5"
+    "@types/pg": "^8.16.0",
+    "sharp": "^0.34.5",
+    "tsx": "^4.21.0"
   }
 }
