Fix: Add TypeScript types for product arrays
- Add proper type annotations for featuredProducts and allProducts
- Fixes TypeScript compilation error

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-﻿DATABASE_URL="postgresql://postgres:0hUKnFhdqxcePvNn@db.busxquitkxwisenwfmkn.supabase.co:6543/postgres?pgbouncer=true&connection_limit=1"
+﻿DATABASE_URL="postgresql://postgres.busxquitkxwisenwfmkn:0hUKnFhdqxcePvNn@aws-1-eu-central-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
