--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
+    "analyze": "ANALYZE=true npm run build",
     "generate-icons": "node scripts/generate-icons.js",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
@@ -37,6 +38,7 @@
     "typescript": "^5.5.3"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^16.1.1",
     "@types/pg": "^8.16.0",
     "sharp": "^0.34.5",
     "tsx": "^4.21.0"
