--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
+    "react-quill": "^2.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3"
   },
