--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-﻿DATABASE_URL="postgresql://postgres.busxquitkxwisenwfmkn:0hUKnFhdqxcePvNn@aws-1-eu-central-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
+﻿DATABASE_URL="postgresql://neondb_owner:npg_YgiwXth5NG9S@ep-square-bonus-ag60x7sm-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require"
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
