--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.23",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.29.0",
     "lucide-react": "^0.454.0",
     "next": "^14.2.33",
     "next-intl": "^3.22.0",
